remove .image-center on contact and about

--- a/en/contact-us.html
+++ b/en/contact-us.html
@@ -66,8 +66,7 @@
 					srcset="../assets/images/showcase-4-m.jpg 650w,
 					../assets/images/showcase-4.jpg 750w"
 					sizes="100vw"
-					alt="Tek treh vrhov - Contact us"
-					class="image-center">
+					alt="Tek treh vrhov - Contact us">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						Contact us
