--- a/sl/kontakt.html
+++ b/sl/kontakt.html
@@ -65,8 +65,7 @@
 					srcset="../assets/images/showcase-4-m.jpg 650w,
 					../assets/images/showcase-4.jpg 750w"
 					sizes="100vw"
-					alt="Tek treh vrhov - Kontakt"
-					class="image-center">
+					alt="Tek treh vrhov - Kontakt">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						Kontakt
