--- a/sl/o-nas.html
+++ b/sl/o-nas.html
@@ -65,8 +65,7 @@
 					srcset="../assets/images/showcase-9-m.jpg 650w,
 					../assets/images/showcase-9.jpg 750w"
 					sizes="100vw"
-					alt="Tek treh vrhov - O nas"
-					class="image-center">
+					alt="Tek treh vrhov - O nas">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						O nas
