--- a/en/about.html
+++ b/en/about.html
@@ -66,8 +66,7 @@
 					srcset="../assets/images/showcase-9-m.jpg 650w,
 					../assets/images/showcase-9.jpg 750w"
 					sizes="100vw"
-					alt="Tek treh vrhov - About us"
-					class="image-center">
+					alt="Tek treh vrhov - About us">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						About
