--- a/en/about.html
+++ b/en/about.html
@@ -19,7 +19,7 @@
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
 	<title>Tek treh vrhov | About</title>
-	<!--styles-->
+	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
@@ -30,8 +30,7 @@
 
 <body>
 	<!--Navigation bar-->
-	<div id="navigation-bar">
-		<!--add home button on the left-->
+	<header id="navigation-bar">
 		<div class="home-container">
 			<a href="/en" id="logo">T3V</a>
 		</div>
@@ -40,9 +39,7 @@
 				<i class="fas fa-bars" id="menu-button"></i>
 			</button>
 		</div>
-
-
-		<!--menu content-->
+		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
 			<ul class="menu-content">
@@ -56,11 +53,11 @@
 				</li>
 			</ul>
 		</div>
-	</div>
+	</header>
 
 	<div class="flex-box">
-		<!--Header-->
-		<header>
+		<!--Showcase image-->
+		<section>
 			<div class="showcase-image">
 				<img src="../assets/images/showcase-9-m.jpg" 
 					srcset="../assets/images/showcase-9-m.jpg 650w,
@@ -73,7 +70,7 @@
 					</span>
 				</div>
 			</div>
-		</header>
+		</section>
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
@@ -107,7 +104,7 @@
 		</footer>
 	</div>
 
-	<!--scripts-->
+	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
