--- a/en/contact-us.html
+++ b/en/contact-us.html
@@ -19,7 +19,7 @@
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
 	<title>Tek treh vrhov | Contact Us</title>
-	<!-- styles -->
+	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
@@ -30,8 +30,7 @@
 
 <body>
 	<!--Navigation bar-->
-	<div id="navigation-bar">
-		<!--add home button on the left-->
+	<header id="navigation-bar">
 		<div class="home-container">
 			<a href="/en" id="logo">T3V</a>
 		</div>
@@ -40,12 +39,9 @@
 				<i class="fas fa-bars" id="menu-button"></i>
 			</button>
 		</div>
-
-
-		<!--menu content-->
+		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
-
 			<ul class="menu-content">
 				<li><a href="faq" class="menu-link">FAQ</a></li>
 				<li><a href="races" class="menu-link" id="races-button">Races</a></li>
@@ -56,11 +52,11 @@
 				<li><a href="/sl/kontakt" class="language-switch menu-link">SI <i class="fas fa-globe"></i></a></li>
 			</ul>
 		</div>
-	</div>
+	</header>
 
 	<div class="flex-box">
-		<!--Header-->
-		<header>
+		<!--Showcase image-->
+		<section>
 			<div class="showcase-image">
 				<img src="../assets/images/showcase-4-m.jpg" 
 					srcset="../assets/images/showcase-4-m.jpg 650w,
@@ -73,7 +69,7 @@
 					</span>
 				</div>
 			</div>
-		</header>
+		</section>
 		<!--section-C-->
 		<section class="section-c grid flex-item">
 			<div class="content-wrap">
@@ -102,7 +98,7 @@
 		</footer>
 	</div>
 
-	<!--scripts-->
+	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/src/js/jquery.validate.js"></script>
 	<script type="text/javascript" src="/src/js/mainScript.js"></script>
