--- a/en/index.html
+++ b/en/index.html
@@ -20,7 +20,7 @@
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
 	<title>Tek treh vrhov 2020</title>
 
-	<!--styles-->
+	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
@@ -30,8 +30,7 @@
 
 <body>
 	<!--Navigation bar-->
-	<div id="navigation-bar">
-		<!--add home button on the left-->
+	<header id="navigation-bar">
 		<div class="home-container">
 			<a href="/" id="logo">T3V</a>
 		</div>
@@ -40,8 +39,7 @@
 				<i class="fas fa-bars" id="menu-button"></i>
 			</button>
 		</div>
-
-		<!--menu content-->
+		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
 
@@ -56,10 +54,10 @@
 				</li>
 			</ul>
 		</div>
-	</div>
+	</header>
 
-	<!--Header-->
-	<header id="showcase">
+	<!--Showcase image-->
+	<section id="showcase">
 		<div class="hero-image">
 			<img src="../assets/images/showcase-1-m.jpg" 
 				srcset="../assets/images/showcase-1-m.jpg 650w,
@@ -72,7 +70,7 @@
 				</span>
 			</div>
 		</div>
-	</header>
+	</section>
 
 	<!--Main-->
 	<main id="main">
@@ -167,7 +165,7 @@
 				Winkler</a></div>
 	</footer>
 
-	<!--scripts-->
+	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
