--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
 	<title>Tek treh vrhov 2020</title>
-	<!--styles-->
+	<!--Styles-->
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
@@ -29,8 +29,7 @@
 
 <body>
 	<!--Navigation bar-->
-	<div id="navigation-bar">
-		<!--add home button on the left-->
+	<header id="navigation-bar">
 		<div class="home-container">
 			<a href="/" id="logo">T3V</a>
 		</div>
@@ -40,7 +39,7 @@
 			</button>
 		</div>
 
-		<!--menu content-->
+		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
 
@@ -55,9 +54,9 @@
 				</li>
 			</ul>
 		</div>
-	</div>
-	<!--Header-->
-	<header id="showcase">
+	</header>
+	<!--Showcase image-->
+	<section id="showcase">
 		<div class="hero-image">
 			<img src="../assets/images/showcase-1-m.jpg" 
 				srcset="../assets/images/showcase-1-m.jpg 650w,
@@ -71,11 +70,10 @@
 			</div>
 
 		</div>
-	</header>
+	</section>
 
 	<!--Main-->
 	<main id="main">
-
 		<!--headline-->
 		<div class="headline small-headline ">
 			<div class="text-wrap">
@@ -166,7 +164,7 @@
 				Winkler</a></div>
 	</footer>
 
-	<!--scripts-->
+	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
