--- a/sl/proge/goriski-tek.html
+++ b/sl/proge/goriski-tek.html
@@ -19,7 +19,7 @@
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
 	<title>Tek treh vrhov | Goriški tek</title>
-	<!--styles-->
+	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
@@ -29,8 +29,7 @@
 
 <body>
 	<!--Navigation bar-->
-	<div id="navigation-bar">
-		<!--add home button on the left-->
+	<header id="navigation-bar">
 		<div class="home-container">
 			<a href="/" id="logo">T3V</a> </div>
 		<div class="menu-icon-container">
@@ -38,9 +37,7 @@
 				<i class="fas fa-bars" id="menu-button"></i>
 			</button>
 		</div>
-
-
-		<!--menu content-->
+		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
 			<ul class="menu-content">
@@ -54,11 +51,11 @@
 				</li>
 			</ul>
 		</div>
-	</div>
+	</header>
 
 	<div class="flex-box">
-		<!--Header-->
-		<header>
+		<!--Showcase image-->
+		<section>
 			<div class="showcase-image">
 				<img src="../../assets/images/goriski-tek-m.jpg" 
 				alt="Tek treh vrhov - Goriški tek in hoja za upanje"
@@ -69,7 +66,7 @@
 					</span>
 				</div>
 			</div>
-		</header>
+		</section>
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
@@ -139,7 +136,7 @@
 		</footer>
 	</div>
 
-	<!--scripts-->
+	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
