--- a/sl/proge/index.html
+++ b/sl/proge/index.html
@@ -19,7 +19,7 @@
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
 	<title>Tek treh vrhov | Proge</title>
-	<!--styles-->
+	<!--Styles-->
 	<link rel="stylesheet" href="/styles/main.css">
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
@@ -29,8 +29,7 @@
 
 <body>
 	<!--Navigation bar-->
-	<div id="navigation-bar">
-		<!--add home button on the left-->
+	<header id="navigation-bar">
 		<div class="home-container">
 			<a href="/" id="logo">T3V</a>
 		</div>
@@ -39,11 +38,9 @@
 				<i class="fas fa-bars" id="menu-button"></i>
 			</button>
 		</div>
-
-		<!--menu content-->
+		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
-
 			<ul class="menu-content">
 				<li><a href="/sl/info" class="menu-link">Info</a></li>
 				<li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
@@ -55,12 +52,11 @@
 				</li>
 			</ul>
 		</div>
-
-	</div>
+	</header>
 
 	<div class="flex-box">
-		<!--Header-->
-		<header>
+		<!--Showcase image-->
+		<section>
 			<div class="showcase-image">
 				<img src="../../assets/images/showcase-11.jpg" alt="Tek treh vrhov - proge" class="image-center">
 				<div class="text-wrap grid">
@@ -69,7 +65,7 @@
 					</span>
 				</div>
 			</div>
-		</header>
+		</section>
 		<!--section-A-->
 		<section class="section-a flex-item">
 
@@ -140,7 +136,7 @@
 		</footer>
 	</div>
 
-	<!--scripts-->
+	<!--Scripts-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
